<resources>
    <string name="app_name">FitPlus</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_assistant">Assistant</string>
    <string name="title_personal">Personal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Tracking</string>
    <string name="fitplus_assistant">FitPlus Assistant</string>

    <!--Facebook-->
    <string name="facebook_app_id">201548860628195</string>
    <string name="fb_login_protocol_scheme">fb201548860628195</string>

    <!--Invitation-->
    <string name="send_link">Invite friends</string>
    <string name="invitation_title">Track runs with FitPlus</string>
    <string name="invitation_message">Get fit by tracking your runs using FitPlus activity tracking</string>
    <string name="invitation_deep_link">https://kr224.app.goo.gl/tracking</string>
    <string name="invitation_cta">START_TRACKING</string>

    <!--Messages-->
    <string name="msg_no_activity">No activity yet</string>
    <string name="msg_profile_update">Updating profile</string>
    <string name="msg_pref_success">Preferences updated successfully</string>
    <string name="msg_profile_update_success">Profile updated successfully</string>
    <string name="msg_saving_progress">Saving progress</string>

    <!--Errors-->
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_time_out">Connection timed out</string>
    <string name="error_failed_update">Failed to update profile</string>
    <string name="error_progress_save_unsuccess">Couldn\'t save your activity data</string>

    <!-- Placeholders -->
    <string name="placeholder_session_length">minutes session length</string>
    <string name="placeholder_weight">kg weight</string>
    <string name="placeholder_calories">Calories</string>
    <string name="placeholder_0_km">0 km</string>
    <string name="placeholder_0_steps">0 steps</string>
    <string name="placeholder_0_calorie">0 calorie</string>

    <!-- Nutrients -->
    <string name="calcium">Calcium</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbohydrates</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="fibre">Dietary Fiber</string>
    <string name="iron">Iron</string>
    <string name="polysaturated">Polysaturated</string>
    <string name="potassium">Potassium</string>
    <string name="protein">Protein</string>
    <string name="saturated">Saturated</string>
    <string name="sodium">Sodium</string>
    <string name="fat">Fat</string>
    <string name="vitamina">Vitamin A</string>
    <string name="vitaminc">Vitamin C</string>

    <!--MISC-->
    <string name="first_and_last_name">First and last name</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign in</string>
    <string name="fitplus">FitPlus</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="registered_with">Registered with</string>
    <string name="start_activity">Start Activity</string>
    <string name="health_settings">Health Settings</string>
    <string name="start">Start</string>
    <string name="add_goal">Add Goal</string>
    <string name="add">ADD</string>
    <string name="phone">Phone</string>
    <string name="close">Close</string>
    <string name="set">Set</string>
    <string name="placeholder_add_distance">Add Distance   Goal</string>
    <string name="placeholder_add_steps">Add Steps   Goal</string>
    <string name="placeholder_add_calorie">Add Calorie   Goal</string>
    <string name="goals">Goals</string>
</resources>
