<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_weight="1"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:hint="@string/phone"
            android:imeOptions="actionNext"
            android:inputType="textFilter|textPersonName|textCapWords"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_weight="1"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/phone_container">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/first_and_last_name"
            android:imeOptions="actionNext"
            android:inputType="textFilter|textPersonName|textCapWords"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/logout"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/textColorDefault"
        app:layout_constraintBottom_toBottomOf="@id/save"
        app:layout_constraintRight_toLeftOf="@id/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_container"
        app:layout_constraintTop_toTopOf="@id/save" />

    <Button
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_container" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/edit_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</android.support.constraint.ConstraintLayout>